XMLtoCSV/objects/unpackaged/objects/Rule_Object_Header_vod__c.object
<CustomObject>
    <description>This is a system object that holds the definition of logic rules and drives their functionality on the Veeva offline platforms.

Do not modify, load or delete data in this object.</description>
    <fields>
        <fullName>Devices_vod__c</fullName>
        <description>Indicates which devices currently utilize the logic defined for the object.</description>
        <inlineHelpText>Indicates which devices currently utilize the logic defined for the object.</inlineHelpText>
        <label>Devices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Validation_Rules_vod__c</fullName>
        <description>Number of Validation Rules for the object.</description>
        <inlineHelpText>Number of Validation Rules for the object.</inlineHelpText>
        <label>Number Validation Rules</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predicate_vod__c</fullName>
        <label>Predicate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the overall object deployment.</description>
        <inlineHelpText>Status of the overall object deployment.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enabled_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id for the record. Format is [Object API Name]</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id for the record. Format is [Object Name]</inlineHelpText>
        <label>VExternal Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Rule Object Header</label>
    <nameField>
        <label>Rule Object Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Object Headers</pluralLabel>
    <recordTypes>
        <fullName>SFDC_Lookup_Filter_Header_vod</fullName>
        <active>true</active>
        <description>System record type. Do not modify.</description>
        <label>SFDC_Lookup_Filter_Header_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC_Rule_Object_Header_vod</fullName>
        <active>true</active>
        <description>System record type. Do not modify.</description>
        <label>SFDC_Rule_Object_Header_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>